--- a/index.html
+++ b/index.html
@@ -54,94 +54,7 @@
         </button>
       </div>
 
-      <!-- <menu> -->
-
-      <div class="mobile-menu" data-menu>
-        <div class="container mobile-menu-container">
-          <button type="button" class="mobile-menu-close-btn" data-menu-close>
-            <svg class="subscribe-icon-close" width="8" height="8">
-              <use href="./images/icons.svg#icon-close"></use>
-            </svg>
-          </button>
-
-          <nav class="mobile-menu-nav">
-            <ul class="mobile-menu-list">
-              <li>
-                <a href="" class="mobile-nav-link current">Studio</a>
-              </li>
-              <li>
-                <a href="" class="mobile-nav-link">Portfolio</a>
-              </li>
-              <li>
-                <a href="./index.html" class="mobile-nav-link">Contacts</a>
-              </li>
-            </ul>
-          </nav>
-          <address>
-            <ul class="nav-list">
-              <li class="phone-block">
-                <a href="tel:+110001111111" class="contact-link"
-                  >+11 (000) 111-11-11</a
-                >
-              </li>
-              <li>
-                <a href="mailto:info@devstudio.com" class="contact-link"
-                  >info@devstudio.com</a
-                >
-              </li>
-            </ul>
-          </address>
-
-          <div class="footer-social-block">
-            <ul class="footer-social">
-              <li class="social-icon">
-                <a
-                  class="social-link"
-                  href="https://instagram.com/abc_def"
-                  aria-label="instagram"
-                >
-                  <svg class="social-networks" width="24" height="24">
-                    <use href="./images/icons.svg#icon-instagram"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-icon">
-                <a
-                  class="social-link"
-                  href="https://twitter.com/example"
-                  aria-label="twitter"
-                >
-                  <svg class="social-networks" width="24" height="24">
-                    <use href="./images/icons.svg#icon-twitter"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-icon">
-                <a
-                  class="social-link"
-                  href="https://facebook.com/example"
-                  aria-label="facebook"
-                >
-                  <svg class="social-networks" width="24" height="24">
-                    <use href="./images/icons.svg#icon-facebook"></use>
-                  </svg>
-                </a>
-              </li>
-              <li class="social-icon">
-                <a
-                  class="social-link"
-                  href="https://linkedin.com/example"
-                  aria-label="linkedin"
-                >
-                  <svg class="social-networks" width="24" height="24">
-                    <use href="./images/icons.svg#icon-linkedin"></use>
-                  </svg>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
+    
     </header>
     <!-- #endregion header  -->
 
@@ -762,6 +675,98 @@
     </div>
 
     <!-- #endregion Modal window -->
+
+  <!-- #region menu -->
+
+      <div class="mobile-menu" data-menu>
+        <div class="container mobile-menu-container">
+          <button type="button" class="mobile-menu-close-btn" data-menu-close>
+            <svg class="subscribe-icon-close" width="8" height="8">
+              <use href="./images/icons.svg#icon-close"></use>
+            </svg>
+          </button>
+
+          <nav class="mobile-menu-nav">
+            <ul class="mobile-menu-list">
+              <li>
+                <a href="" class="mobile-nav-link current">Studio</a>
+              </li>
+              <li>
+                <a href="" class="mobile-nav-link">Portfolio</a>
+              </li>
+              <li>
+                <a href="./index.html" class="mobile-nav-link">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <address>
+            <ul class="nav-list">
+              <li class="phone-block">
+                <a href="tel:+110001111111" class="contact-link contact-link-tel"
+                  >+11 (000) 111-11-11</a
+                >
+              </li>
+              <li>
+                <a href="mailto:info@devstudio.com" class="contact-link contact-link-mailto"
+                  >info@devstudio.com</a
+                >
+              </li>
+            </ul>
+          </address>
+
+          <div class="footer-social-block">
+            <ul class="footer-social">
+              <li class="social-icon">
+                <a
+                  class="social-link"
+                  href="https://instagram.com/abc_def"
+                  aria-label="instagram"
+                >
+                  <svg class="social-networks" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-icon">
+                <a
+                  class="social-link"
+                  href="https://twitter.com/example"
+                  aria-label="twitter"
+                >
+                  <svg class="social-networks" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-icon">
+                <a
+                  class="social-link"
+                  href="https://facebook.com/example"
+                  aria-label="facebook"
+                >
+                  <svg class="social-networks" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="social-icon">
+                <a
+                  class="social-link"
+                  href="https://linkedin.com/example"
+                  aria-label="linkedin"
+                >
+                  <svg class="social-networks" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+       <!-- #endregion menu -->
+
     <script src="./js/modal.js"></script>
     <script src="./js/menu.js"></script>
   </body>
