modified:   css/styles.css         modified:   index.html

--- a/index.html
+++ b/index.html
@@ -494,7 +494,7 @@
           </p>
         </div>
         <div class="footer-social-block footer-logo-div">
-          <p class="footer-text">Social media</p>
+          <p class="subscribe-title">Social media</p>
           <ul class="footer-social">
             <li class="social-icon">
               <a
